--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <footer class="footer">
       <div class="content has-text-centered">
         <p>2025 Food Hygiene App</p>
+        <p>Bilge Demirkaya</p>
       </div>
     </footer>
   </body>
