--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -14,7 +14,7 @@
     list of local authorities running the FHRS or FHIS
   </p>
 
-  <p class="title">About <span class="primary"> Food Hygiene App </span></p>
+  <p class="title">About <span class="has-text-primary has-text-opacity-50"> Food Hygiene App </span></p>
 
   <p class="content">
     The food hygiene rating app is not a guide to food quality. The information
