--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </ul>
     </div>
 
-    <section class="hero is-fullheight-with-navbar">
+    <section class="body-full">
       <div class="hero-body">
         <div class="container">
           <div id="tab-content">
