--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,34 +1,37 @@
 <section>
-  <p class="title">About the data</p>
-
+  <h2 class="title">About the Data</h2>
   <p class="content">
     The data provide the food hygiene rating or inspection result given to a
     business and reflect the standards of food hygiene found on the date of
     inspection or visit by the local authority. Businesses include restaurants,
-    pubs, cafés, takeaways, hotels and other places consumers eat, as well as
+    pubs, cafés, takeaways, hotels, and other places consumers eat, as well as
     supermarkets and other food shops. The data are held on behalf of local
-    authorities participating in either the Food Standards Agency's: national
-    Food Hygiene Rating Scheme (FHRS) in England, Northern Ireland and Wales, or
-    the Food Hygiene Information Scheme (FHIS) in Scotland Data are only
+    authorities participating in either the Food Standards Agency's national
+    Food Hygiene Rating Scheme (FHRS) in England, Northern Ireland, and Wales,
+    or the Food Hygiene Information Scheme (FHIS) in Scotland. Data are only
     available for local authority areas running either of these schemes. See a
-    list of local authorities running the FHRS or FHIS
+    list of local authorities running the FHRS or FHIS.
   </p>
 
-  <p class="title">About <span class="has-text-primary has-text-opacity-50"> Food Hygiene App </span></p>
-
+  <h2 class="title">About the <span class="has-text-primary has-text-opacity-50">Food Hygiene App</span></h2>
   <p class="content">
     The food hygiene rating app is not a guide to food quality. The information
     on businesses is held on behalf of local authorities in England, Northern
-    Ireland, Wales and Scotland. Any queries about individual businesses should
+    Ireland, Wales, and Scotland. Any queries about individual businesses should
     be directed to the appropriate
     <a
-      href="/https://www.food.gov.uk/contact/consumers/find-details/contact-a-local-food-safety-team"
-      >local authority</a
-    >.
+      href="https://www.food.gov.uk/contact/consumers/find-details/contact-a-local-food-safety-team"
+      title="Contact a local food safety team"
+      aria-label="Contact a local food safety team for queries about individual businesses"
+      >local authority</a>.
   </p>
 
   <div>
-    <a href="https://www.food.gov.uk/safety-hygiene/food-hygiene-rating-scheme">
+    <a
+      href="https://www.food.gov.uk/safety-hygiene/food-hygiene-rating-scheme"
+      title="Find out more about food hygiene ratings"
+      aria-label="Learn more about the food hygiene rating scheme"
+    >
       Find out more about ratings
     </a>
   </div>
