--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -1,36 +1,56 @@
+<!-- Search Form -->
+<section id="search-section" class="box">
+  <h2 class="title is-4">Search for a Food Hygiene Rating</h2>
+  <form id="search-form" class="field" aria-labelledby="search-section">
+    <fieldset>
+      <div class="field">
+        <label for="local-authority-input" class="label">Local Authority:</label>
+        <div class="control">
+          <p id="local-authority-help" class="help">Enter the name of the local authority</p>
 
-      <!-- Search Form -->
-      <section id="search-section" class="box">
-        <h2 class="subtitle is-4">Search for a food hygiene rating</h2>
-        <form id="search-form" class="field">
-          <div class="field">
-            <label for="local-authority-input" class="label">Local Authority:</label>
-            <div class="control">
-              <input type="text" id="local-authority-input" class="input" name="local-authority"
-                placeholder="e.g. London" required />
-            </div>
-          </div>
-
-          <div class="field">
-            <label for="restaurant-name-input" class="label">Restaurant Name:</label>
-            <div class="control">
-              <input type="text" id="restaurant-name-input" class="input" name="restaurant-name"
-                placeholder="e.g. Burger King" required/>
-            </div>
-          </div>
-
-          <div class="control">
-            <button type="submit" class="button is-primary is-fullwidth">
-              Search
-            </button>
-          </div>
-        </form>
-        <div id="error-message" class="notification is-danger is-hidden"></div>
-      </section>
-
-      <!-- Results Section -->
-      <section id="results-section">
-        <div id="results-container" class="columns is-multiline">
-          <!-- Search results will appear here -->
+          <input
+            type="text"
+            id="local-authority-input"
+            class="input"
+            name="local-authority"
+            placeholder="e.g. London"
+            required
+            aria-required="true"
+            aria-describedby="local-authority-help"
+          />
         </div>
-    </section>
+      </div>
+
+      <div class="field">
+        <label for="restaurant-name-input" class="label">Restaurant Name:</label>
+        <p id="restaurant-name-help" class="help">Enter the name of the restaurant you are looking for</p>
+        <div class="control">
+          <input
+            type="text"
+            id="restaurant-name-input"
+            class="input"
+            name="restaurant-name"
+            placeholder="e.g. Burger King"
+            required
+            aria-required="true"
+            aria-describedby="restaurant-name-help"
+          />
+        </div>
+      </div>
+
+      <div class="control">
+        <button type="submit" class="button is-primary is-fullwidth">
+          Search
+        </button>
+      </div>
+    </fieldset>
+  </form>
+  <div id="error-message" class="notification is-danger is-hidden" role="alert" aria-live="assertive"></div>
+</section>
+
+<!-- Results Section -->
+<section id="results-section" aria-labelledby="results-section-title">
+  <div id="results-container" class="columns is-multiline">
+    <!-- Search results will appear here -->
+  </div>
+</section>
